Change UserControllerTest.